--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "phpmailer/phpmailer": "^6.6",
         "guzzlehttp/guzzle": "^7.4",
         "maennchen/zipstream-php": "^2.2",
-        "nesbot/carbon": "^2.59"
+        "nesbot/carbon": "^2.59",
+        "idoalit/slims-eloquent-models": "^0.0.1"
     },
     "autoload": {
         "psr-4": {
